k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ts-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Use "letsencrypt-prod" for production
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  rules:
    - host: nodejs.34.57.252.146.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-express-service
                port:
                  number: 80
    - host: ws.34.57.252.146.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ws-service
                port:
                  number: 80
  tls:
    - hosts:
        - nodejs.34.57.252.146.nip.io
        - ws.34.57.252.146.nip.io
      secretName: tls-secret
